fixed page header content from overflowing container

--- a/css/main.css
+++ b/css/main.css
@@ -3,23 +3,24 @@ body {
     font-family: 'Raleway', sans-serif;
 }
 
-#pageheader {
+#pageHeader {
     background-image: url("../img/keyboard.jpg");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     text-align: center;
     color: white;
 }
-#pageheader h1 {
+#pageHeader h1 {
     padding-top: 2em;
     letter-spacing: .4em;
     color: white;
     margin: 0;
 }
 
-#pageheader h2 {
+#pageHeader h2 {
     padding-top: 1.5em;
     letter-spacing: .4em;
 }
